5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1577_1330.log
== TEST (2019-03-21 18:24:39) 
-- CODE:
x=250
x=x/6
print(round(x,n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(x,n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:24:54) 
-- CODE:
x=250
x=x/6
print(round(x,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:24:55) 
-- CODE:
x=250
x=x/6
print(round(x,2))
-- EXECUTION TIME:
0.168766
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
